    around the current day.
  . support for "<xth> <weekday of" and "last <weekday> of" phrases to be used
    with months - like in "last saturday of februari 2008".
  . DatePeriod class which supports iterating over a DateTime object applying
    DateInterval on each iteration, up to an end date or limited by maximum
    number of occurences.

- Added hash_copy() function. (Tony)
- Added sha224 hash algorithm to the hash extension. (Scott)
- Added ReflectionProperty::setAccessible() method that allows non-public
  property's values to be read through ::getValue(). (Derick)
- Added msg_queue_exists() function. (Benjamin Schulz)
- Added Firebird specific attributes that can be set via PDO::setAttribute()
  to control formatting of date/timestamp columns: PDO::FB_ATTR_DATE_FORMAT,
  PDO::FB_ATTR_TIME_FORMAT and PDO::FB_ATTR_TIMESTAMP_FORMAT. (Lars W)
- Added gmp_testbit() function. (Stas)
- Added icon format support to getimagesize(). (Scott)
- Added LDAP_OPT_NETWORK_TIMEOUT option for ldap_set_option() to allow
  setting network timeout (FR #42837). (Jani)
- Added optional escape character parameter to fgetcsv(). (David Soria Parra)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurrence of needle.
  (Johannes, Felipe)
- Added xsl->setProfiling() for profiling stylesheets. (Christian)
- Added long-option feature to getopt() and made getopt() available also on
  win32 systems by adding a common getopt implementation into core.
  (David Soria Parra, Jani)
- Added support for optional values, and = as separator, in getopt(). (Hannes)
- Added lcfirst() function. (David C)
- Added PREG_BAD_UTF8_OFFSET_ERROR constant. (Nuno)
- Added native support for asinh(), acosh(), atanh(), log1p() and expm1().
  (Kalle)
- Added inet_pton() and inet_ntop() also for Windows platforms. (Kalle)
- Added mcrypt_create_iv() also for Windows platforms. (Pierre)
